# EvalBench

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  DATABASE.md  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  dashboard.py  datasets.py  jobs.py  login.py  models.py  results.py  system.py  tasks.py  teams.py  users.py  webhooks.py
backend/app/core/: celery_app.py  config.py  ldap_auth.py  oauth_oidc.py  security.py
backend/app/crud/: crud_dataset.py  crud_model.py  crud_platform_setting.py  crud_result.py  crud_task.py  crud_team.py  crud_user.py  crud_webhook.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  dataset.py  model_config.py  platform_setting.py  result.py  task.py  team.py  user.py  webhook.py
backend/app/schemas/: dashboard.py  dataset.py  ldap_settings.py  model_config.py  oauth_settings.py  result.py  system.py  task.py  team.py  user.py  webhook.py
backend/app/services/: custom_model_adapter.py  evalscope.py  job_manager.py  parser.py  sample_fields.py  sample_retry.py  webhook_sender.py
backend/scripts/: celery-entrypoint.sh  entrypoint.sh  init_db.py  reparse_tasks.py  seed_datasets.py
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: runtime-config.js
frontend/src/: App.tsx  i18n.ts  index.css  (+2 more)
(+42 files in other folders)
