[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "celery>=5.6.3",
    "evalscope>=1.5.1",
    "fastapi>=0.135.2",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "sse-starlette>=3.3.3",
    "uvicorn[standard]>=0.42.0",
    "ldap3>=2.9.1",
    "cachetools>=5.5.0",
]
